Adding options to the markers
The options are:
hide, show and delete all markers simultaneously

--- a/FinalProject1.html
+++ b/FinalProject1.html
@@ -13,7 +13,15 @@
     <header>
         <h2>Final Project1</h2>
     </header>    
+
+    <div id="floating-panel">
+      <input onclick="clearMarkers();" type=button value="Hide Markers">
+      <input onclick="showMarkers();" type=button value="Show All Markers">
+      <input onclick="deleteMarkers();" type=button value="Delete Markers">
+    </div> 
+    
     <div id='map'></div>
+    <p>Click on the map to add markers.</p>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUPsSzCNTOKH8IK_rQj1GdcHcW83EDSQA&callback=initMap"
         async defer></script>
